[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flask_models"
version = "0.3.2"
authors = [
  {name="Brixt18", email=""},
]
description = "Basics models for Python-Flask framework"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Brixt18/flask-models"